translated english terms into Spanish

--- a/My Library.bib
+++ b/My Library.bib
@@ -7,6 +7,14 @@
   month = aug
 }
 
+@misc{core-a_gaming_analysis_2019,
+  title = {Analysis: {{Why Button Mashing Doesn}}'t {{Work}}},
+  shorttitle = {Analysis},
+  author = {{Core-A Gaming}},
+  year = {2019},
+  month = may
+}
+
 @misc{d4rkonion_fat_2022,
   title = {{{FAT}} 3},
   author = {D4RKONION},
@@ -14,6 +22,17 @@
   month = aug,
   abstract = {FAT - SF Frame Data App},
   copyright = {GPL-3.0}
+}
+
+@misc{desjardins_which_2018,
+  title = {Which {{College Degrees Get}} the {{Highest Salaries}}?},
+  author = {Desjardins, Jeff},
+  year = {2018},
+  month = jul,
+  journal = {Visual Capitalist},
+  abstract = {How do different college degrees compare for earning potential? This chart uses a data set from 1.2 million past students to compare 50 different majors.},
+  howpublished = {https://www.visualcapitalist.com/visualizing-salaries-college-degrees/},
+  langid = {american}
 }
 
 @misc{dustloop_using_2022,
@@ -31,6 +50,23 @@
   title = {The {{Fighting Game Glossary}} | Infil.Net},
   howpublished = {https://glossary.infil.net/?t=Frame\%20Advantage},
   file = {/home/ccyanide/Zotero/storage/LWDAVKXQ/glossary.infil.net.html}
+}
+
+@misc{noauthor_fighting_nodate-1,
+  title = {The {{Fighting Game Glossary}} | Infil.Net},
+  howpublished = {https://glossary.infil.net/?t=Health\%20Bar},
+  file = {/home/ccyanide/Zotero/storage/SIYAI4HW/glossary.infil.net.html}
+}
+
+@misc{noauthor_fighting_nodate-2,
+  title = {The {{Fighting Game Glossary}} | Infil.Net},
+  howpublished = {https://glossary.infil.net/?t=Frame\%20Data},
+  file = {/home/ccyanide/Zotero/storage/6NAGY6S5/glossary.infil.net.html}
+}
+
+@misc{noauthor_flexible_nodate,
+  title = {Flexible {{Information Technology Jobs}} in {{Mayag\"uez}}, {{PR}} | {{Indeed}}.Com},
+  howpublished = {https://www.indeed.com/jobs?q=information+technology\&l=Mayaguez\%2C+PR\&vjk=94f86e7ac3fabfe1}
 }
 
 @article{noauthor_granblue_2022,
@@ -77,6 +113,21 @@
   title = {Rubendal/{{SSBU-Calculator}}: {{Smash Ultimate}} Knockback Calculator},
   howpublished = {https://github.com/rubendal/SSBU-Calculator},
   file = {/home/ccyanide/Zotero/storage/UNS2L4AJ/SSBU-Calculator.html}
+}
+
+@misc{noauthor_salary_nodate,
+  title = {Salary: {{Information Technology}} ({{September}}, 2022)},
+  shorttitle = {Salary},
+  abstract = {The average salary for an Information Technology is \$51,315 per year in US. Click here to see the total pay, recent salaries shared and more!},
+  howpublished = {https://www.glassdoor.com/Salaries/information-technology-salary-SRCH\_KO0,22.htm},
+  langid = {english},
+  file = {/home/ccyanide/Zotero/storage/3J84CTQY/information-technology-salary-SRCH_KO0,22.html}
+}
+
+@misc{noauthor_sistema_nodate,
+  title = {Sistema de Informaci\'on - {{Qu\'e}} Es, Definici\'on y Concepto | 2022 | {{Economipedia}}},
+  howpublished = {https://economipedia.com/definiciones/sistema-de-informacion.html},
+  file = {/home/ccyanide/Zotero/storage/DXCMP4DK/sistema-de-informacion.html}
 }
 
 @misc{noauthor_smash_nodate,
@@ -144,6 +195,33 @@
   langid = {english},
   annotation = {Page Version ID: 1109272383},
   file = {/home/ccyanide/Zotero/storage/979L67CY/Super_Smash_Bros.html}
+}
+
+@misc{noauthor_wayback_2012,
+  title = {Wayback {{Machine}}},
+  year = {2012},
+  month = may,
+  howpublished = {https://web.archive.org/web/20120510191656/http://www.census.gov/compendia/statab/2012/tables/12s1325.pdf},
+  file = {/home/ccyanide/Zotero/storage/Y9XJ22N4/2012 - Wayback Machine.pdf}
+}
+
+@misc{noauthor_what_nodate,
+  title = {What {{Is}} the {{Average Salary}} in the {{USA}}?},
+  journal = {Indeed Career Guide},
+  abstract = {Understanding the average salary for someone in the U.S. can help you get a sense of how much you might expect to make when working in your chosen career.},
+  howpublished = {https://www.indeed.com/career-advice/pay-salary/average-salary-usa},
+  langid = {english},
+  file = {/home/ccyanide/Zotero/storage/WL6Q4SUA/average-salary-usa.html}
+}
+
+@misc{noauthor_what_nodate-1,
+  title = {What {{Does}} an {{Information Technologist Do}}? {{Role}} and {{Skills}}},
+  shorttitle = {What {{Does}} an {{Information Technologist Do}}?},
+  journal = {Indeed Career Guide},
+  abstract = {Learn more about information technology (IT), discover what does an information technologist do and review the typical steps and skills involved in this role.},
+  howpublished = {https://sg.indeed.com/career-advice/finding-a-job/what-does-information-technologist-do},
+  langid = {english},
+  file = {/home/ccyanide/Zotero/storage/7ZAZGMDN/what-does-information-technologist-do.html}
 }
 
 @misc{willingham_what_2018,
