--- a/main.tex
+++ b/main.tex
@@ -6,12 +6,12 @@
 \usepackage{parskip}
 \usepackage{graphicx}
 \setabbreviationstyle[acronym]{long-short}
-\newacronym{startup}{startup frames}{Cantidad de frames para comenzar una movida}
-\newacronym{active}{active frames}{Cantidad de frames en la cual es posible colisionar con el oponente}
-\newacronym{recovery}{recovery frames}{Cantidad de frames en la cual es imposible admitir otra movida}
-\newacronym{frame_data}{frame data}{los valores de startup frames, active frames, recovery frames y blockstun para una movida}
-\newacronym{on_block}{on block}{Cantidad de frames de ventaja o desventaja luego de restar recovery frames y blockstun}
-\newacronym{blockstun}{blockstun}{Cantidad de frames en que el atacado no puede hacer nada aparte de bloquear}
+\newacronym{startup}{fotogramas de inicio}{Cantidad de fotogramas para comenzar una movida}
+\newacronym{active}{fotogramas activos}{Cantidad de fotogramas en la cual es posible colisionar con el oponente}
+\newacronym{recovery}{fotogramas de recuperación}{Cantidad de fotogramas en la cual es imposible admitir otra movida}
+\newacronym{frame_data}{datos fotográmicos}{los valores de fotogramas de inicio, fotogramas activos, fotogramas de recuperación y aturdimiento de bloqueo para una movida}
+\newacronym{on_block}{bloqueando}{Cantidad de fotogramas de ventaja o desventaja luego de restar fotogramas de recuperación y aturdimiento de bloqueo}
+\newacronym{blockstun}{aturdimiento de bloqueo}{Cantidad de fotogramas en que el atacado no puede hacer nada aparte de bloquear}
 \makeglossaries
 
 \title{COMP4998 Reporte}
