--- a/My Library.bib
+++ b/My Library.bib
@@ -7,6 +7,17 @@
   month = aug
 }
 
+@misc{bowman_why_2014,
+  title = {Why the Fighting Game Community Is Color Blind},
+  author = {Bowman, Mitch},
+  year = {2014},
+  month = feb,
+  journal = {Polygon},
+  abstract = {How the FGC's roots grew the most racially diverse community in gaming.},
+  langid = {american},
+  file = {/home/smokey/Zotero/storage/G8RXZDTU/fighting-game-diversity.html}
+}
+
 @misc{core-a_gaming_analysis_2019,
   title = {Analysis: {{Why Button Mashing Doesn}}'t {{Work}}},
   shorttitle = {Analysis},
@@ -43,25 +54,25 @@
   journal = {Dustloop Wiki},
   howpublished = {https://www.dustloop.com/w/Using\_Frame\_Data},
   langid = {english},
-  file = {/home/ccyanide/Zotero/storage/IBVPRMSH/Using_Frame_Data.html}
+  file = {/home/smokey/Zotero/storage/IBVPRMSH/Using_Frame_Data.html}
 }
 
 @misc{noauthor_fighting_nodate,
   title = {The {{Fighting Game Glossary}} | Infil.Net},
   howpublished = {https://glossary.infil.net/?t=Frame\%20Advantage},
-  file = {/home/ccyanide/Zotero/storage/LWDAVKXQ/glossary.infil.net.html}
+  file = {/home/smokey/Zotero/storage/LWDAVKXQ/glossary.infil.net.html}
 }
 
 @misc{noauthor_fighting_nodate-1,
   title = {The {{Fighting Game Glossary}} | Infil.Net},
-  howpublished = {https://glossary.infil.net/?t=Health\%20Bar},
-  file = {/home/ccyanide/Zotero/storage/SIYAI4HW/glossary.infil.net.html}
+  howpublished = {https://glossary.infil.net/?t=Frame\%20Data},
+  file = {/home/smokey/Zotero/storage/6NAGY6S5/glossary.infil.net.html}
 }
 
 @misc{noauthor_fighting_nodate-2,
   title = {The {{Fighting Game Glossary}} | Infil.Net},
-  howpublished = {https://glossary.infil.net/?t=Frame\%20Data},
-  file = {/home/ccyanide/Zotero/storage/6NAGY6S5/glossary.infil.net.html}
+  howpublished = {https://glossary.infil.net/?t=Health\%20Bar},
+  file = {/home/smokey/Zotero/storage/SIYAI4HW/glossary.infil.net.html}
 }
 
 @misc{noauthor_flexible_nodate,
@@ -78,7 +89,7 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1105731908},
-  file = {/home/ccyanide/Zotero/storage/9AWJ3B6Q/Granblue_Fantasy_Versus.html}
+  file = {/home/smokey/Zotero/storage/9AWJ3B6Q/Granblue_Fantasy_Versus.html}
 }
 
 @misc{noauthor_grasshopper_nodate,
@@ -88,13 +99,13 @@
   abstract = {Hello MFFA peoples! This is a character balancing / frame data tool I made a couple years back called Grasshopper. I finally just finished polishing it off. It allows you to gather multiple characters' frame data and damage values on a chart. You can easily copy / paste / move them around for ave...},
   howpublished = {https://mugenfreeforall.com/topic/27012-grasshopper-character-balancing-frame-data-tool/},
   langid = {american},
-  file = {/home/ccyanide/Zotero/storage/HP9A3SZ4/27012-grasshopper-character-balancing-frame-data-tool.html}
+  file = {/home/smokey/Zotero/storage/HP9A3SZ4/27012-grasshopper-character-balancing-frame-data-tool.html}
 }
 
 @misc{noauthor_guide_nodate,
   title = {A {{Guide}} to {{Frame Data}} - {{Dream Cancel}}},
   howpublished = {https://dreamcancel.com/2011/10/a-guide-to-frame-data/},
-  file = {/home/ccyanide/Zotero/storage/N8QSFY5X/a-guide-to-frame-data.html}
+  file = {/home/smokey/Zotero/storage/N8QSFY5X/a-guide-to-frame-data.html}
 }
 
 @article{noauthor_guilty_2022,
@@ -106,13 +117,22 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1106552864},
-  file = {/home/ccyanide/Zotero/storage/3KK3D2HH/Guilty_Gear_Strive.html}
+  file = {/home/smokey/Zotero/storage/3KK3D2HH/Guilty_Gear_Strive.html}
+}
+
+@misc{noauthor_numpad_nodate,
+  title = {Numpad Notation},
+  journal = {Fighting Game Collectors Wiki},
+  abstract = {Numpad notation is a form of fighting game notation in which the directions that you may move in a fighting game are mapped to the layout of a keyboard's numpad. The notation is oriented as follows, with the "N" in the middle representing "neutral:" Numpad notation is the most convenient way to quickly transcribe complex inputs and combos. It originated as an easy way of discussing fighting game commands before arrow keys were commonly available on computer character sets. They are now mostly in},
+  howpublished = {https://fighting-game-collectors.fandom.com/wiki/Numpad\_notation},
+  langid = {english},
+  file = {/home/smokey/Zotero/storage/WNZIYBN7/Numpad_notation.html}
 }
 
 @misc{noauthor_rubendalssbu-calculator_nodate,
   title = {Rubendal/{{SSBU-Calculator}}: {{Smash Ultimate}} Knockback Calculator},
   howpublished = {https://github.com/rubendal/SSBU-Calculator},
-  file = {/home/ccyanide/Zotero/storage/UNS2L4AJ/SSBU-Calculator.html}
+  file = {/home/smokey/Zotero/storage/UNS2L4AJ/SSBU-Calculator.html}
 }
 
 @misc{noauthor_salary_nodate,
@@ -121,32 +141,31 @@
   abstract = {The average salary for an Information Technology is \$51,315 per year in US. Click here to see the total pay, recent salaries shared and more!},
   howpublished = {https://www.glassdoor.com/Salaries/information-technology-salary-SRCH\_KO0,22.htm},
   langid = {english},
-  file = {/home/ccyanide/Zotero/storage/3J84CTQY/information-technology-salary-SRCH_KO0,22.html}
+  file = {/home/smokey/Zotero/storage/3J84CTQY/information-technology-salary-SRCH_KO0,22.html}
 }
 
 @misc{noauthor_sistema_nodate,
   title = {Sistema de Informaci\'on - {{Qu\'e}} Es, Definici\'on y Concepto | 2022 | {{Economipedia}}},
   howpublished = {https://economipedia.com/definiciones/sistema-de-informacion.html},
-  file = {/home/ccyanide/Zotero/storage/DXCMP4DK/sistema-de-informacion.html}
+  file = {/home/smokey/Zotero/storage/DXCMP4DK/sistema-de-informacion.html}
 }
 
 @misc{noauthor_smash_nodate,
   title = {Smash {{Ultimate Calculator}}},
   howpublished = {https://rubendal.github.io/SSBU-Calculator/},
-  file = {/home/ccyanide/Zotero/storage/M78NKGE9/SSBU-Calculator.html}
+  file = {/home/smokey/Zotero/storage/M78NKGE9/SSBU-Calculator.html}
 }
 
 @article{noauthor_street_2022,
-  title = {{\emph{Street }}{{{\emph{Fighter III}}}}{\emph{: 3rd }}{{{\emph{Strike}}}}},
-  shorttitle = {{\emph{Street }}{{{\emph{Fighter III}}}}},
+  title = {{\emph{Street }}{{{\emph{Fighter V}}}}},
   year = {2022},
   month = aug,
   journal = {Wikipedia},
-  abstract = {Street Fighter III 3rd Strike: Fight for the Future (ストリートファイターIII サードストライク ファイト・フォー・ザ・フューチャー) is a 2D fighting game developed and published by Capcom, originally released for the arcades in 1999. It was ported to the Dreamcast, PlayStation 2, and Xbox between 2000 and 2010. A downloadable online version titled Street Fighter III: 3rd Strike Online Edition was released on PlayStation Network and Xbox Live Arcade in 2011. Street Fighter III 3rd Strike is the second follow-up to Street Fighter III, following Street Fighter III: 2nd Impact. Like its predecessors, it runs on the CP System III hardware. 3rd Strike increased the character roster by adding five new characters, notably including Chun-Li. It also added further refinements to the previous game's play mechanics and rules. The game was well received in all of its versions and has since been regarded as one of the greatest fighting games of all time. On 29 May 2018, Street Fighter III: 3rd Strike - Fight for the Future was released as a part of the Street Fighter 30th Anniversary Collection for the PlayStation 4, Xbox One, Steam and Nintendo Switch.},
+  abstract = {Street Fighter V is a fighting game developed by Capcom and Dimps and published by Capcom for the PlayStation 4 and Microsoft Windows in 2016. Similar to the previous games in the Street Fighter series, Street Fighter V features a side-scrolling fighting gameplay system. The game also introduces the "V-Gauge", which builds as the player receives attacks and adds three new skills. The game features 16 characters at launch, with four of them being new to the series. A main story mode and 30 additional characters were added through updates and downloadable content. According to Capcom, the game is a PlayStation 4 console exclusive due to both Sony and Capcom having "the same vision for the growth potential in the fighting game space". The game is powered by Unreal Engine 4, and had a beta test prior to its launch. Upon release, the game received mixed reviews, with critics praising the game's graphics and gameplay, but criticizing its lack of content and characters, as well as its technical issues such as broken servers at launch and software bugs. Capcom was expecting the game to sell at least 2 million copies by the end of their fiscal year 2016, a target that was missed, selling only 1.4 million copies as of March 31, 2016. As of June 30, 2022, the game's accumulated sales reached 6.60 million, making it the best selling Street Fighter game on home consoles, surpassing Street Fighter II according to Capcom's Platinum Titles fiscal report.Its update, Street Fighter V: Arcade Edition, was released on January 16, 2018, and was received more positively, with improvements to the user interface and content, in particular its single-player modes and the addition of the much-requested Arcade Mode. A second update, titled Street Fighter V: Champion Edition, includes all fighters, stages, and most of the costumes released through its fourth season. It was released on February 14, 2020, receiving a physical release in the form of the original Street Fighter V disc, containing a voucher code to download the remaining content.},
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
-  annotation = {Page Version ID: 1106686885},
-  file = {/home/ccyanide/Zotero/storage/TGX8V4QP/Street_Fighter_III_3rd_Strike.html}
+  annotation = {Page Version ID: 1105720233},
+  file = {/home/smokey/Zotero/storage/7KSQ6TNP/Street_Fighter_V.html}
 }
 
 @article{noauthor_street_2022-1,
@@ -158,19 +177,20 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1100411514},
-  file = {/home/ccyanide/Zotero/storage/VUE87AIT/Street_Fighter_IV.html}
+  file = {/home/smokey/Zotero/storage/VUE87AIT/Street_Fighter_IV.html}
 }
 
 @article{noauthor_street_2022-2,
-  title = {{\emph{Street }}{{{\emph{Fighter V}}}}},
+  title = {{\emph{Street }}{{{\emph{Fighter III}}}}{\emph{: 3rd }}{{{\emph{Strike}}}}},
+  shorttitle = {{\emph{Street }}{{{\emph{Fighter III}}}}},
   year = {2022},
   month = aug,
   journal = {Wikipedia},
-  abstract = {Street Fighter V is a fighting game developed by Capcom and Dimps and published by Capcom for the PlayStation 4 and Microsoft Windows in 2016. Similar to the previous games in the Street Fighter series, Street Fighter V features a side-scrolling fighting gameplay system. The game also introduces the "V-Gauge", which builds as the player receives attacks and adds three new skills. The game features 16 characters at launch, with four of them being new to the series. A main story mode and 30 additional characters were added through updates and downloadable content. According to Capcom, the game is a PlayStation 4 console exclusive due to both Sony and Capcom having "the same vision for the growth potential in the fighting game space". The game is powered by Unreal Engine 4, and had a beta test prior to its launch. Upon release, the game received mixed reviews, with critics praising the game's graphics and gameplay, but criticizing its lack of content and characters, as well as its technical issues such as broken servers at launch and software bugs. Capcom was expecting the game to sell at least 2 million copies by the end of their fiscal year 2016, a target that was missed, selling only 1.4 million copies as of March 31, 2016. As of June 30, 2022, the game's accumulated sales reached 6.60 million, making it the best selling Street Fighter game on home consoles, surpassing Street Fighter II according to Capcom's Platinum Titles fiscal report.Its update, Street Fighter V: Arcade Edition, was released on January 16, 2018, and was received more positively, with improvements to the user interface and content, in particular its single-player modes and the addition of the much-requested Arcade Mode. A second update, titled Street Fighter V: Champion Edition, includes all fighters, stages, and most of the costumes released through its fourth season. It was released on February 14, 2020, receiving a physical release in the form of the original Street Fighter V disc, containing a voucher code to download the remaining content.},
+  abstract = {Street Fighter III 3rd Strike: Fight for the Future (ストリートファイターIII サードストライク ファイト・フォー・ザ・フューチャー) is a 2D fighting game developed and published by Capcom, originally released for the arcades in 1999. It was ported to the Dreamcast, PlayStation 2, and Xbox between 2000 and 2010. A downloadable online version titled Street Fighter III: 3rd Strike Online Edition was released on PlayStation Network and Xbox Live Arcade in 2011. Street Fighter III 3rd Strike is the second follow-up to Street Fighter III, following Street Fighter III: 2nd Impact. Like its predecessors, it runs on the CP System III hardware. 3rd Strike increased the character roster by adding five new characters, notably including Chun-Li. It also added further refinements to the previous game's play mechanics and rules. The game was well received in all of its versions and has since been regarded as one of the greatest fighting games of all time. On 29 May 2018, Street Fighter III: 3rd Strike - Fight for the Future was released as a part of the Street Fighter 30th Anniversary Collection for the PlayStation 4, Xbox One, Steam and Nintendo Switch.},
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
-  annotation = {Page Version ID: 1105720233},
-  file = {/home/ccyanide/Zotero/storage/7KSQ6TNP/Street_Fighter_V.html}
+  annotation = {Page Version ID: 1106686885},
+  file = {/home/smokey/Zotero/storage/TGX8V4QP/Street_Fighter_III_3rd_Strike.html}
 }
 
 @article{noauthor_super_2022,
@@ -182,7 +202,7 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1109273382},
-  file = {/home/ccyanide/Zotero/storage/TTMWXXCT/Super_Smash_Bros.html}
+  file = {/home/smokey/Zotero/storage/TTMWXXCT/Super_Smash_Bros.html}
 }
 
 @article{noauthor_super_2022-1,
@@ -194,15 +214,15 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1109272383},
-  file = {/home/ccyanide/Zotero/storage/979L67CY/Super_Smash_Bros.html}
+  file = {/home/smokey/Zotero/storage/979L67CY/Super_Smash_Bros.html}
 }
 
-@misc{noauthor_wayback_2012,
+@misc{noauthor_wayback_2012-1,
   title = {Wayback {{Machine}}},
   year = {2012},
   month = may,
   howpublished = {https://web.archive.org/web/20120510191656/http://www.census.gov/compendia/statab/2012/tables/12s1325.pdf},
-  file = {/home/ccyanide/Zotero/storage/Y9XJ22N4/2012 - Wayback Machine.pdf}
+  file = {/home/smokey/Zotero/storage/Y9XJ22N4/2012 - Wayback Machine.pdf}
 }
 
 @misc{noauthor_what_nodate,
@@ -211,7 +231,7 @@
   abstract = {Understanding the average salary for someone in the U.S. can help you get a sense of how much you might expect to make when working in your chosen career.},
   howpublished = {https://www.indeed.com/career-advice/pay-salary/average-salary-usa},
   langid = {english},
-  file = {/home/ccyanide/Zotero/storage/WL6Q4SUA/average-salary-usa.html}
+  file = {/home/smokey/Zotero/storage/WL6Q4SUA/average-salary-usa.html}
 }
 
 @misc{noauthor_what_nodate-1,
@@ -221,7 +241,7 @@
   abstract = {Learn more about information technology (IT), discover what does an information technologist do and review the typical steps and skills involved in this role.},
   howpublished = {https://sg.indeed.com/career-advice/finding-a-job/what-does-information-technologist-do},
   langid = {english},
-  file = {/home/ccyanide/Zotero/storage/7ZAZGMDN/what-does-information-technologist-do.html}
+  file = {/home/smokey/Zotero/storage/7ZAZGMDN/what-does-information-technologist-do.html}
 }
 
 @misc{willingham_what_2018,
@@ -231,7 +251,7 @@
   month = aug,
   journal = {What is eSports? A look at an explosive billion-dollar industry},
   howpublished = {https://edition.cnn.com/2018/08/27/us/esports-what-is-video-game-professional-league-madden-trnd/index.html},
-  file = {/home/ccyanide/Zotero/storage/EGD88DAL/index.html}
+  file = {/home/smokey/Zotero/storage/EGD88DAL/index.html}
 }
 
 
