--- a/References.bib
+++ b/References.bib
@@ -91,6 +91,17 @@
   file = {/home/smokey/Zotero/storage/9AWJ3B6Q/Granblue_Fantasy_Versus.html}
 }
 
+@misc{noauthor_granblue_2022-1,
+  title = {Granblue {{Fantasy Versus Wiki}}},
+  year = {2022},
+  month = aug,
+  journal = {Dustloop Wiki},
+  abstract = {The open resource for Granblue Fantasy Versus. Home to combos, character guides, frame data, hitboxes, and more.},
+  howpublished = {https://www.dustloop.com/w/Granblue\_Fantasy\_Versus},
+  langid = {english},
+  file = {/home/smokey/Zotero/storage/Z5LQ8J8X/Granblue_Fantasy_Versus.html}
+}
+
 @misc{noauthor_grasshopper_nodate,
   title = {Grasshopper ({{Character Balancing}} / {{Frame Data Tool}})},
   author = {, RobotMonkeyHead},
