Changed titles for ref and toc

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{tabularx}
 \usepackage{lipsum}
+
 \setabbreviationstyle[acronym]{long-short}
 \newacronym{startup}{fotogramas de inicio}{Cantidad de fotogramas para comenzar una movida}
 \newacronym{active}{fotogramas activos}{Cantidad de fotogramas en la cual es posible colisionar con el oponente}
@@ -22,6 +23,12 @@
 \date{Primer Semestre, 2022-2033}
 
 \begin{document}
+\renewcommand{\acronymname}{Acrónimos}
+\renewcommand{\bibname}{Referencias Bibliográficas}
+\renewcommand{\contentsname}{Tabla de Contenido}
+\renewcommand{\chaptername}{Capítulo}
+\renewcommand{\figurename}{Figura}
+\renewcommand{\tablename}{Tabla}
 
 \maketitle
 
